feat: add new param to reject not JSON
https://gravitee.atlassian.net/browse/PEM-44